# nrp_whiskeye_robot

./: README.md  bibi_configuration.bibi  deploy_experiment.sh  experiment_configuration.exc  robot_control.py  whiskeye_world.sdf  whiskeyea.py
brain_model/model/: ModulePlatform.py  kc_model.py  model_support.py  reaff.py  spaces_to_tabs.sh
brain_model/model/gui/: gui.glade~
plugin/: makefile  whisker_pose.h
resources/: ModuleAction.py  ModuleMotor.py  ModuleSensory.py  ModuleSpatial.py  model_def.py  model_pars.py  run_gui.py  run_model.py  run_spatial_monitor.py
resources/gui/: gui.glade
whiskeye_gazebo/: model.config  whiskeye_robot.sdf
whiskeye_gazebo/mesh/data/: WhiskEye_reduced - Body-1.STL  (+3 more)
whiskeye_model/WhiskEye/: TODO.txt  setup.bash
whiskeye_model/WhiskEye/whiskeye_msgs/: makefile  model.config  package.xml
whiskeye_model/WhiskEye/whiskeye_msgs/msg/: __init__.py  makefile
whiskeye_model/whiskeye_arena/: arena.fcstd1  arena_v2.fcstd  model.config  model.sdf  whiskeye_arena.material
whiskeye_model/whiskeye_gazebo/: model.config
whiskeye_model/whiskeye_msgs/: bridge_u.h
whiskeye_model/whiskeye_robot/: README.txt  whiskeye_robot_oldcolors.sdf
whiskeye_model/whiskeye_toy_ball_blue/: model.sdf
whiskeye_model/whiskeye_toy_ball_blue_heavy/: model.config  model.sdf
whiskeye_model/whiskeye_toy_ball_green/: model.sdf
whiskeye_model/whiskeye_toy_ball_green_heavy/: model.sdf
whiskeye_model/whiskeye_toy_ball_red/: model.sdf
whiskeye_model/whiskeye_toy_ball_red_heavy/: model.sdf
whiskeye_robot/: whiskeye_robot.sdf
(+253 files in other folders)
