<?xml version="1.0" encoding="utf-8"?>
<package>
	<name>whiskeye_msgs</name>
	<version>0.0.1</version>
	<description>
		whiskeye messages
	</description>
	<maintainer email="b.mitchinson@sheffield.ac.uk">Ben Mitch</maintainer>
	<license>BSD</license>
	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>
</package>

